# dumbchat

./: Cargo.toml  README.md
src/: lib.rs
