[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = "4.3.10"
serde = { version = "1.0.164", features = ["derive"]}
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.29.0", features = ["full"] }
